--- a/.config
+++ b/.config
@@ -2439,7 +2439,7 @@ CONFIG_PACKAGE_kmod-ipt-nat6=y
 # CONFIG_PACKAGE_kmod-ipt-nathelper-rtsp is not set
 # CONFIG_PACKAGE_kmod-ipt-nflog is not set
 # CONFIG_PACKAGE_kmod-ipt-nfqueue is not set
-# CONFIG_PACKAGE_kmod-ipt-offload is not set
+CONFIG_PACKAGE_kmod-ipt-offload=y
 # CONFIG_PACKAGE_kmod-ipt-physdev is not set
 # CONFIG_PACKAGE_kmod-ipt-proto is not set
 # CONFIG_PACKAGE_kmod-ipt-psd is not set
@@ -2456,9 +2456,9 @@ CONFIG_PACKAGE_kmod-ipt-tproxy=y
 # CONFIG_PACKAGE_kmod-ipt-ulog is not set
 # CONFIG_PACKAGE_kmod-netatop is not set
 CONFIG_PACKAGE_kmod-nf-conntrack=y
-# CONFIG_PACKAGE_kmod-nf-conntrack-netlink is not set
+CONFIG_PACKAGE_kmod-nf-conntrack-netlink=y
 CONFIG_PACKAGE_kmod-nf-conntrack6=y
-# CONFIG_PACKAGE_kmod-nf-flow is not set
+CONFIG_PACKAGE_kmod-nf-flow=y
 CONFIG_PACKAGE_kmod-nf-ipt=y
 CONFIG_PACKAGE_kmod-nf-ipt6=y
 # CONFIG_PACKAGE_kmod-nf-ipvs is not set
@@ -2480,7 +2480,7 @@ CONFIG_PACKAGE_kmod-nfnetlink=y
 # CONFIG_PACKAGE_kmod-nft-netdev is not set
 # CONFIG_PACKAGE_kmod-nft-offload is not set
 # CONFIG_PACKAGE_kmod-nft-queue is not set
-CONFIG_PACKAGE_kmod-oaf=y
+# CONFIG_PACKAGE_kmod-oaf is not set
 # end of Netfilter Extensions
 
 #
@@ -2633,7 +2633,7 @@ CONFIG_PACKAGE_kmod-pppox=y
 CONFIG_PACKAGE_kmod-sit=y
 CONFIG_PACKAGE_kmod-slhc=y
 # CONFIG_PACKAGE_kmod-slip is not set
-# CONFIG_PACKAGE_kmod-tcp-bbr is not set
+CONFIG_PACKAGE_kmod-tcp-bbr=y
 # CONFIG_PACKAGE_kmod-tcp-hybla is not set
 # CONFIG_PACKAGE_kmod-trelay is not set
 # CONFIG_PACKAGE_kmod-tun is not set
@@ -2904,140 +2904,7 @@ CONFIG_PACKAGE_kmod-mt76-core=y
 # CONFIG_PACKAGE_kmod-mt7603e is not set
 CONFIG_PACKAGE_kmod-mt7615-common=y
 CONFIG_PACKAGE_kmod-mt7615-firmware=y
-CONFIG_PACKAGE_kmod-mt7615d=y
-CONFIG_MTK_SUPPORT_OPENWRT=y
-CONFIG_MTK_WIFI_DRIVER=y
-CONFIG_MTK_FIRST_IF_MT7615E=y
-# CONFIG_MTK_FIRST_IF_MT7622 is not set
-# CONFIG_MTK_FIRST_IF_MT7626 is not set
-# CONFIG_MTK_FIRST_IF_NONE is not set
-# CONFIG_MTK_SECOND_IF_NONE is not set
-CONFIG_MTK_SECOND_IF_MT7615E=y
-CONFIG_MTK_THIRD_IF_NONE=y
-# CONFIG_MTK_THIRD_IF_MT7615E is not set
-CONFIG_MTK_RT_FIRST_CARD=7615
-CONFIG_MTK_RT_SECOND_CARD=7615
-CONFIG_MTK_RT_FIRST_IF_RF_OFFSET=0xc0000
-CONFIG_MTK_RT_SECOND_IF_RF_OFFSET=0xc8000
-CONFIG_MTK_MT_WIFI=y
-CONFIG_MTK_MT_WIFI_PATH="mt_wifi"
-
-#
-# WiFi Generic Feature Options
-#
-CONFIG_MTK_FIRST_IF_EEPROM_FLASH=y
-# CONFIG_MTK_FIRST_IF_EEPROM_PROM is not set
-# CONFIG_MTK_FIRST_IF_EEPROM_EFUSE is not set
-CONFIG_MTK_RT_FIRST_CARD_EEPROM="flash"
-CONFIG_MTK_SECOND_IF_EEPROM_FLASH=y
-# CONFIG_MTK_SECOND_IF_EEPROM_PROM is not set
-# CONFIG_MTK_SECOND_IF_EEPROM_EFUSE is not set
-CONFIG_MTK_RT_SECOND_CARD_EEPROM="flash"
-CONFIG_MTK_MULTI_INF_SUPPORT=y
-CONFIG_MTK_WIFI_BASIC_FUNC=y
-CONFIG_MTK_DOT11_N_SUPPORT=y
-CONFIG_MTK_DOT11_VHT_AC=y
-CONFIG_MTK_G_BAND_256QAM_SUPPORT=y
-CONFIG_MTK_TPC_SUPPORT=y
-CONFIG_MTK_ICAP_SUPPORT=y
-CONFIG_MTK_SPECTRUM_SUPPORT=y
-CONFIG_MTK_BACKGROUND_SCAN_SUPPORT=y
-CONFIG_MTK_SMART_CARRIER_SENSE_SUPPORT=y
-CONFIG_MTK_MT_DFS_SUPPORT=y
-# CONFIG_MTK_OFFCHANNEL_SCAN_FEATURE is not set
-# CONFIG_MTK_DPP_SUPPORT is not set
-CONFIG_MTK_HDR_TRANS_TX_SUPPORT=y
-CONFIG_MTK_HDR_TRANS_RX_SUPPORT=y
-# CONFIG_MTK_DBDC_MODE is not set
-CONFIG_MTK_WSC_INCLUDED=y
-CONFIG_MTK_WSC_V2_SUPPORT=y
-CONFIG_MTK_DOT11W_PMF_SUPPORT=y
-CONFIG_MTK_TXBF_SUPPORT=y
-# CONFIG_MTK_FAST_NAT_SUPPORT is not set
-# CONFIG_MTK_FTM_SUPPORT is not set
-# CONFIG_MTK_MBO_SUPPORT is not set
-CONFIG_MTK_IGMP_SNOOP_SUPPORT=y
-CONFIG_MTK_RTMP_FLASH_SUPPORT=y
-CONFIG_MTK_PRE_CAL_TRX_SET1_SUPPORT=y
-CONFIG_MTK_RLM_CAL_CACHE_SUPPORT=y
-CONFIG_MTK_PRE_CAL_TRX_SET2_SUPPORT=y
-# CONFIG_MTK_RF_LOCKDOWN_SUPPORT is not set
-# CONFIG_MTK_LINK_TEST_SUPPORT is not set
-CONFIG_MTK_ATE_SUPPORT=y
-# CONFIG_MTK_PASSPOINT_R2 is not set
-CONFIG_MTK_UAPSD=y
-CONFIG_MTK_TCP_RACK_SUPPORT=y
-CONFIG_MTK_RED_SUPPORT=y
-# CONFIG_MTK_FDB_SUPPORT is not set
-CONFIG_MTK_FIRST_IF_IPAILNA=y
-# CONFIG_MTK_FIRST_IF_IPAELNA is not set
-# CONFIG_MTK_FIRST_IF_EPAELNA is not set
-CONFIG_MTK_SECOND_IF_IPAILNA=y
-# CONFIG_MTK_SECOND_IF_IPAELNA is not set
-# CONFIG_MTK_SECOND_IF_EPAELNA is not set
-# CONFIG_MTK_RLT_MAC is not set
-# CONFIG_MTK_RTMP_MAC is not set
-# end of WiFi Generic Feature Options
-
-#
-# WiFi Operation Modes
-#
-CONFIG_MTK_WIFI_MODE_AP=y
-# CONFIG_MTK_WIFI_MODE_STA is not set
-# CONFIG_MTK_WIFI_MODE_BOTH is not set
-CONFIG_MTK_MT_AP_SUPPORT=y
-CONFIG_MTK_WDS_SUPPORT=y
-CONFIG_MTK_WIFI_EAP_FEATURE=y
-# CONFIG_MTK_MLME_MULTI_QUEUE_SUPPORT is not set
-CONFIG_MTK_MBSS_SUPPORT=y
-CONFIG_MTK_APCLI_SUPPORT=y
-# CONFIG_MTK_APCLI_CERT_SUPPORT is not set
-CONFIG_MTK_MAC_REPEATER_SUPPORT=y
-# CONFIG_MTK_MWDS is not set
-CONFIG_MTK_MUMIMO_SUPPORT=y
-CONFIG_MTK_MU_RA_SUPPORT=y
-CONFIG_MTK_DOT11R_FT_SUPPORT=y
-CONFIG_MTK_DOT11K_RRM_SUPPORT=y
-CONFIG_MTK_INTERWORKING=y
-# CONFIG_MTK_MAP_SUPPORT is not set
-CONFIG_MTK_OCE_SUPPORT=y
-# CONFIG_MTK_ENTERPRISE_AP_SUPPORT is not set
-# CONFIG_MTK_CFG80211_SUPPORT is not set
-# CONFIG_MTK_MBSS_AS_WDS_AP_SUPPORT is not set
-# CONFIG_MTK_DSCP_QOS_MAP_SUPPORT is not set
-# CONFIG_MTK_DSCP_PRI_SUPPORT is not set
-# CONFIG_MTK_MIN_PHY_RATE_SUPPORT is not set
-# CONFIG_MTK_FAST_UP_RATE_SUPPORT is not set
-# CONFIG_MTK_CON_WPS_SUPPORT is not set
-CONFIG_MTK_MCAST_RATE_SPECIFIC=y
-CONFIG_MTK_VOW_SUPPORT=y
-CONFIG_MTK_FQ_SCH_SUPPORT=y
-CONFIG_MTK_BAND_STEERING=y
-# CONFIG_MTK_LED_CONTROL_SUPPORT is not set
-# CONFIG_MTK_WLAN_HOOK is not set
-# CONFIG_MTK_RADIUS_ACCOUNTING_SUPPORT is not set
-CONFIG_MTK_GREENAP_SUPPORT=y
-CONFIG_MTK_PCIE_ASPM_DYM_CTRL_SUPPORT=y
-# CONFIG_MTK_COEX_SUPPORT is not set
-# CONFIG_MTK_EASY_SETUP_SUPPORT is not set
-# CONFIG_MTK_EVENT_NOTIFIER_SUPPORT is not set
-# CONFIG_MTK_AIR_MONITOR is not set
-CONFIG_MTK_WNM_SUPPORT=y
-CONFIG_MTK_WIFI_MSI_SUPPORT=y
-CONFIG_MTK_WPA3_SUPPORT=y
-CONFIG_MTK_OWE_SUPPORT=y
-# CONFIG_MTK_VENDOR_FEATURE10_SUPPORT is not set
-# CONFIG_MTK_VENDOR_FEATURE11_SUPPORT is not set
-# CONFIG_MTK_RCSA_SUPPORT is not set
-# end of WiFi Operation Modes
-
-CONFIG_MTK_WIFI_MT_MAC=y
-# CONFIG_MTK_CHIP_MT7603E is not set
-CONFIG_MTK_CHIP_MT7615E=y
-# CONFIG_MTK_CHIP_MT7622 is not set
-# CONFIG_MTK_CHIP_MT7663E is not set
-# CONFIG_MTK_CHIP_MT7626 is not set
-CONFIG_MTK_MT_MAC=y
+# CONFIG_PACKAGE_kmod-mt7615d is not set
 CONFIG_PACKAGE_kmod-mt7615e=y
 # CONFIG_PACKAGE_kmod-mt7663-firmware-ap is not set
 # CONFIG_PACKAGE_kmod-mt7663-firmware-sta is not set
@@ -4772,7 +4639,7 @@ CONFIG_PACKAGE_luci-app-accesscontrol=y
 # CONFIG_PACKAGE_luci-app-airwhu is not set
 # CONFIG_PACKAGE_luci-app-aliddns is not set
 # CONFIG_PACKAGE_luci-app-amule is not set
-CONFIG_PACKAGE_luci-app-appfilter=y
+# CONFIG_PACKAGE_luci-app-appfilter is not set
 # CONFIG_PACKAGE_luci-app-argon-config is not set
 # CONFIG_PACKAGE_luci-app-aria2 is not set
 # CONFIG_PACKAGE_luci-app-arpbind is not set
@@ -4835,7 +4702,7 @@ CONFIG_PACKAGE_luci-app-firewall=y
 # CONFIG_PACKAGE_luci-app-minidlna is not set
 # CONFIG_PACKAGE_luci-app-minieap is not set
 # CONFIG_PACKAGE_luci-app-mjpg-streamer is not set
-CONFIG_PACKAGE_luci-app-mtwifi=y
+# CONFIG_PACKAGE_luci-app-mtwifi is not set
 # CONFIG_PACKAGE_luci-app-music-remote-center is not set
 # CONFIG_PACKAGE_luci-app-mwan3 is not set
 # CONFIG_PACKAGE_luci-app-mwan3helper is not set
@@ -4848,7 +4715,7 @@ CONFIG_PACKAGE_luci-app-mtwifi=y
 # CONFIG_PACKAGE_luci-app-nginx-pingos is not set
 # CONFIG_PACKAGE_luci-app-ngrokc is not set
 # CONFIG_PACKAGE_luci-app-njitclient is not set
-# CONFIG_PACKAGE_luci-app-nlbwmon is not set
+CONFIG_PACKAGE_luci-app-nlbwmon=y
 # CONFIG_PACKAGE_luci-app-nps is not set
 # CONFIG_PACKAGE_luci-app-ntpc is not set
 # CONFIG_PACKAGE_luci-app-ocserv is not set
@@ -4961,7 +4828,7 @@ CONFIG_PACKAGE_luci-app-ssr-plus_INCLUDE_Trojan=y
 # CONFIG_PACKAGE_luci-app-travelmate is not set
 # CONFIG_PACKAGE_luci-app-trojan-server is not set
 CONFIG_PACKAGE_luci-app-ttyd=y
-# CONFIG_PACKAGE_luci-app-turboacc is not set
+CONFIG_PACKAGE_luci-app-turboacc=y
 CONFIG_PACKAGE_TURBOACC_INCLUDE_OFFLOADING=y
 # CONFIG_PACKAGE_TURBOACC_INCLUDE_SHORTCUT_FE is not set
 CONFIG_PACKAGE_TURBOACC_INCLUDE_BBR_CCA=y
@@ -4999,7 +4866,7 @@ CONFIG_PACKAGE_luci-app-vssr_INCLUDE_Xray=y
 # CONFIG_PACKAGE_luci-app-wifischedule is not set
 CONFIG_PACKAGE_luci-app-wireguard=y
 # CONFIG_PACKAGE_luci-app-wol is not set
-# CONFIG_PACKAGE_luci-app-wrtbwmon is not set
+CONFIG_PACKAGE_luci-app-wrtbwmon=y
 # CONFIG_PACKAGE_luci-app-xlnetacc is not set
 # CONFIG_PACKAGE_luci-app-zerotier is not set
 # end of 3. Applications
@@ -5073,7 +4940,6 @@ CONFIG_PACKAGE_luci-lib-nixio_openssl=y
 CONFIG_PACKAGE_default-settings=y
 CONFIG_PACKAGE_default-settings-chn=y
 CONFIG_PACKAGE_luci-i18n-accesscontrol-zh-cn=y
-CONFIG_PACKAGE_luci-i18n-appfilter-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-autoreboot-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-base-ca is not set
 # CONFIG_PACKAGE_luci-i18n-base-cs is not set
@@ -5128,6 +4994,9 @@ CONFIG_PACKAGE_luci-i18n-filetransfer-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-vi is not set
 CONFIG_PACKAGE_luci-i18n-firewall-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-firewall-zh-tw is not set
+# CONFIG_PACKAGE_luci-i18n-nlbwmon-ja is not set
+# CONFIG_PACKAGE_luci-i18n-nlbwmon-ru is not set
+CONFIG_PACKAGE_luci-i18n-nlbwmon-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-passwall-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ramfree-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-samba-ca is not set
@@ -5157,6 +5026,7 @@ CONFIG_PACKAGE_luci-i18n-samba-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-samba-zh-tw is not set
 CONFIG_PACKAGE_luci-i18n-smartdns-zh-cn=y
 CONFIG_PACKAGE_luci-i18n-ttyd-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-turboacc-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-upnp-ca is not set
 # CONFIG_PACKAGE_luci-i18n-upnp-cs is not set
 # CONFIG_PACKAGE_luci-i18n-upnp-de is not set
@@ -5189,6 +5059,7 @@ CONFIG_PACKAGE_luci-i18n-vssr-zh-cn=y
 # CONFIG_PACKAGE_luci-i18n-wireguard-ru is not set
 # CONFIG_PACKAGE_luci-i18n-wireguard-sv is not set
 CONFIG_PACKAGE_luci-i18n-wireguard-zh-cn=y
+CONFIG_PACKAGE_luci-i18n-wrtbwmon-zh-cn=y
 # end of LuCI
 
 #
@@ -5997,17 +5868,7 @@ CONFIG_PACKAGE_uhttpd-mod-ubus=y
 # CONFIG_PACKAGE_airmon-ng is not set
 # CONFIG_PACKAGE_dynapoint is not set
 # CONFIG_PACKAGE_horst is not set
-CONFIG_PACKAGE_mt_wifi=y
-
-#
-# MT_WIFI Configuration
-#
-# CONFIG_MTK_CHIP_MT7603E_MT7612E is not set
-# CONFIG_MTK_CHIP_MT7603E_MT7615E is not set
-# CONFIG_MTK_CHIP_MT7615E_DBDC is not set
-# CONFIG_MTK_CHIP_MT7915E_DBDC is not set
-# end of MT_WIFI Configuration
-
+# CONFIG_PACKAGE_mt_wifi is not set
 # CONFIG_PACKAGE_pixiewps is not set
 # CONFIG_PACKAGE_reaver is not set
 # CONFIG_PACKAGE_wavemon is not set
@@ -6088,7 +5949,7 @@ CONFIG_PACKAGE_6in4=y
 # CONFIG_PACKAGE_apcupsd is not set
 # CONFIG_PACKAGE_apcupsd-cgi is not set
 # CONFIG_PACKAGE_apinger is not set
-CONFIG_PACKAGE_appfilter=y
+# CONFIG_PACKAGE_appfilter is not set
 # CONFIG_PACKAGE_atlas-probe is not set
 # CONFIG_PACKAGE_atlas-sw-probe is not set
 # CONFIG_PACKAGE_atlas-sw-probe-rpc is not set
@@ -6220,7 +6081,7 @@ CONFIG_PACKAGE_mtkhqos_util=y
 # CONFIG_PACKAGE_netstinky is not set
 # CONFIG_PACKAGE_nextdns is not set
 # CONFIG_PACKAGE_nfdump is not set
-# CONFIG_PACKAGE_nlbwmon is not set
+CONFIG_PACKAGE_nlbwmon=y
 # CONFIG_PACKAGE_noping is not set
 # CONFIG_PACKAGE_nut is not set
 CONFIG_PACKAGE_odhcp6c=y
