--- a/.config
+++ b/.config
@@ -5006,7 +5006,7 @@ CONFIG_PACKAGE_luci-app-weburl=y
 # CONFIG_PACKAGE_luci-theme-argon-mc is not set
 # CONFIG_PACKAGE_luci-theme-argon-mod is not set
 CONFIG_PACKAGE_luci-theme-argonv2=y
-CONFIG_PACKAGE_luci-theme-argonv3=y
+# CONFIG_PACKAGE_luci-theme-argonv3=y
 # CONFIG_PACKAGE_luci-theme-atmaterial is not set
 CONFIG_PACKAGE_luci-theme-bootstrap=y
 # CONFIG_PACKAGE_luci-theme-bootstrap-mod is not set
